--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "s7plc",
+  "name": "mcplc",
   "version": "5.0.0",
-  "description": "s7plc",
+  "description": "mcplc",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
